--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2.1"
+        "php": "^7.2.1",
+        "elasticsearch/elasticsearch": "^7.2"
     },
     "autoload": {
         "psr-0": {"": "src/"}
